--- a/src/WebContent/css/all.css
+++ b/src/WebContent/css/all.css
@@ -1,1 +1,16 @@
 @charset "UTF-8";
+/* for all pages */
+/* font settings */
+/* background settings */
+body {
+    font-family: serif;
+    color:rgb(0, 0, 0);
+    background-color: rgb(102, 209, 212);
+    margin: 0 0 0 0;
+    margin: 0 auto 0 auto;
+    max-width: 960px;
+}
+/* header {
+    background-color: rgb(238, 26, 26);
+    width:autoi
+} */
