--- a/src/WebContent/css/all.css
+++ b/src/WebContent/css/all.css
@@ -10,6 +10,9 @@ body {
     margin: 0 auto 0 auto;
     max-width: 960px;
 }
+#aniheader{
+    display: inline;
+}
 /* header {
     background-color: rgb(238, 26, 26);
     width:autoi
