--- a/src/WebContent/css/diary.css
+++ b/src/WebContent/css/diary.css
@@ -1,12 +1,18 @@
 @charset "UTF-8";
 /* 日記一覧のリスト表示 */
+.table-contents{
+  overflow-y: scroll;
+  height: 400px;
+}
+
 .start_list {
+  white-space: nowrap;
   border-collapse: collapse;
   margin-left: auto;
   margin-right: auto;
   width: 700px;
   height: 80px;
-  overflow: auto;		/*はみ出した場合は、スクロールバーを表示する*/
+  /* overflow: auto;		はみ出した場合は、スクロールバーを表示する */
   margin: 3px auto;
   padding: 60px;
   border: solid 1px  black;
@@ -25,5 +31,10 @@ border: solid 1px  black;
 
 #next-prev-button {
   text-align: center;
+}
+
+.animals {
+  position: fixed;
+  bottom: 0%;
 }
 
