--- a/src/WebContent/css/password_reset.css
+++ b/src/WebContent/css/password_reset.css
@@ -1,1 +1,27 @@
 @charset "UTF-8";
+/* font settings */
+/* background settings */
+main {
+    font-family: serif;
+    color:rgb(0, 0, 0);
+    /* all.cssで指定済みのためいらない */
+    /* background-color: rgb(102, 209, 212); */
+    margin: 0 auto 0 auto;
+    /* all.cssでbodyタグ内で指定済 */
+    /* max-width: 1080px; */
+    text-align: center;
+}
+.main {
+    background-color: rgb(255, 255, 255);
+    max-width: 540px;
+    min-height: 200px;
+    text-align: center;
+    margin: 0 auto 0 auto;
+}
+.footer{
+  text-align: center;
+}
+/* header {
+    background-color: rgb(238, 26, 26);
+    width:autoi
+} */
