--- a/all.css
+++ b/all.css
@@ -104,7 +104,6 @@ body {
 .btn,
 a.btn,
 button.btn {
-	max-width: 100px;
   font-size: 80%;
   font-weight: 700;
   line-height: 1.5;
@@ -134,7 +133,7 @@ a.btn-border {
   a.btn-border:after {
     position: absolute;
 
-    max-width: 100%;
+    width: 225px;
     height: 2px;
 
     content: '';
