pass再設定ページ

--- a/src/WebContent/css/diary.css
+++ b/src/WebContent/css/diary.css
@@ -23,6 +23,7 @@
 
 .start_list th {
   background-color:rgb(252, 252, 252);
+  height:10px;
    border: solid 1px  black;
    position: sticky;
    top: 0;
