--- a/src/WebContent/css/login.css
+++ b/src/WebContent/css/login.css
@@ -12,11 +12,16 @@ main {
     text-align: center;
 }
 .main {
-    background-color: rgb(255, 255, 255); 
+    background-color: rgb(255, 255, 255);
     max-width: 540px;
     min-height: 200px;
     text-align: center;
     margin: 0 auto 0 auto;
+}
+.logo{
+	text-align: center;
+    margin: 0 auto 0 auto;
+
 }
 /* header {
     background-color: rgb(238, 26, 26);
