--- a/src/WebContent/css/schedule_edit.css
+++ b/src/WebContent/css/schedule_edit.css
@@ -5,16 +5,38 @@
     display: flex;
   }
 
-  table{
+	table{
     /* 予定とToDoと日記のところを分ける */
-    border: solid 3px;
-    border-collapse:  collapse;     /* セルの線を重ねる */
-    border-color:darkorange;
+ 	 /*border: solid 3px;
+    border-collapse:  collapse;
+    border-color:darkorange; */
     padding: 5px;
     margin: 5px;
     table-layout: fixed;
-    
+
+
   }
+
+/*アコーディオンのタイトル部分*/
+  summary {
+  /*display: block;*/
+  cursor: pointer;
+  transition: 0.2s; /* 変化を滑らかに */
+}
+
+summary:hover {
+  cursor: pointer; /* カーソルを指マークに */
+  background-color: #EFEFEF;
+}
+ /*アコーディオンの中身*/
+ details {
+  height: 20px;
+  transition: .5s;
+}
+details[open] {
+  height:280px;
+  background: #c3f6ff;
+}
   input[type="text"], textarea{
     margin: 5px;
     padding: 5px;
@@ -33,7 +55,7 @@
     font-size:18px;
     height:10px;
   }
-  textarea{ 
+  textarea{
     /* 日記のメモ欄は別のものを作る */
     width: 22rem;
     height: 5rem;
