--- a/src/WebContent/css/toppage.css
+++ b/src/WebContent/css/toppage.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
-body {
+/* body {
   padding: 0;
   margin: 10px;
-}
+} */
 
-p {
+/* p {
   padding: 10px;
-}
+} */
 
 .container {
   padding: 10px;
@@ -14,4 +14,93 @@ p {
 
 input[type=date] {
   font-size: 18px;
+}
+
+.rightside {
+    margin-left:100px;
+  }
+
+
+/*全体*/
+.wrapper{
+    max-width: 600px;
+    margin: 0 auto;
+    color: #666;
+}
+#header {
+    text-align: center;
+    font-size: 24px;
+    width: 100%;
+    margin: 1rem 0 0;
+}
+
+/*カレンダー*/
+#calendar {
+    text-align: center;
+    width: 600px;
+    height:400px;
+
+}
+.caltab {
+    outline: 2px solid #ddd;
+    border-collapse: collapse;
+    width: 100%;
+}
+th {
+    color: #000;
+}
+th, td {
+    outline: 1px solid #ddd;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+#header{
+	text-align:center;
+	margin-left:150px;
+
+}
+
+
+/*日曜日*/
+td:first-child {
+    color: red;
+}
+/*土曜日*/
+td:last-child {
+    color: blue;
+}
+/*前後月の日付*/
+td.disabled {
+    color: #ccc;
+}
+/*本日*/
+td.today {
+    background-color: #D65E72;
+    color: #fff;
+}
+
+/*ボタン*/
+#next-prev-button {
+    position: relative;
+}
+#next-prev-button button{
+    cursor: pointer;
+    background: #B78D4A;
+    color: #fff;
+    border: 1px solid #B78D4A;
+    border-radius: 4px;
+    font-size: 1rem;
+    padding: 0.5rem 2rem;
+    margin: 1rem 0;
+}
+#next-prev-button button:hover{
+    background-color: #D4BB92;
+    border-color: #D4BB92;
+}
+#prev {
+    float: left;
+}
+#next {
+    float: right;
 }
