--- a/src/WebContent/css/toppage.css
+++ b/src/WebContent/css/toppage.css
@@ -7,176 +7,238 @@
 /* p {
   padding: 10px;
 } */
-
 .container {
-  padding: 10px;
+	padding: 10px;
 }
 
 input[type=date] {
-  font-size: 18px;
+	font-size: 18px;
 }
 
 .rightside {
-    margin-left:100px;
-  }
-
+	margin-left: 100px;
+}
 
 /*全体*/
-.wrapper{
-    max-width: 600px;
-    margin: 0 auto;
-    color: #666;
+.wrapper {
+	max-width: 600px;
+	margin: 0 auto;
+	color: #666;
 }
+
 #header {
-    text-align: center;
-    font-size: 24px;
-    width: 100%;
-    margin: 1rem 0 0;
+	text-align: center;
+	font-size: 24px;
+	width: 100%;
+	margin: 1rem 0 0;
 }
 
 /*カレンダー*/
 #calendar {
-    text-align: center;
-    width: 600px;
-    height:400px;
-
+	text-align: center;
+	width: 600px;
+	height: 400px;
 }
+
 .caltab {
-    outline: 2px solid #ddd;
-    border-collapse: collapse;
-    width: 100%;
+	outline: 2px solid #ddd;
+	border-collapse: collapse;
+	width: 100%;
 }
+
 th {
-    color: #000;
+	color: #000;
 }
+
 th, td {
-    outline: 1px solid #ddd;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    text-align: center;
-}
-#header{
-	text-align:center;
-	margin-left:150px;
-
+	outline: 1px solid #ddd;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	text-align: center;
 }
 
+#header {
+	text-align: center;
+	margin-left: 150px;
+}
 
 /*日曜日*/
 td:first-child {
-    color: red;
+	color: red;
 }
 /*土曜日*/
 td:last-child {
-    color: blue;
+	color: blue;
 }
 /*前後月の日付*/
 td.disabled {
-    color: #ccc;
+	color: #ccc;
 }
 /*本日*/
 td.today {
-    background-color: #D65E72;
-    color: #fff;
+	background-color: #D65E72;
+	color: #fff;
 }
 
 /*ボタン*/
 #next-prev-button {
-    position: relative;
+	position: relative;
 }
-#next-prev-button button{
-    cursor: pointer;
-    background: #B78D4A;
-    color: #fff;
-    border: 1px solid #B78D4A;
-    border-radius: 4px;
-    font-size: 1rem;
-    padding: 0.5rem 2rem;
-    margin: 1rem 0;
+
+#next-prev-button button {
+	cursor: pointer;
+	background: #B78D4A;
+	color: #fff;
+	border: 1px solid #B78D4A;
+	border-radius: 4px;
+	font-size: 1rem;
+	padding: 0.5rem 2rem;
+	margin: 1rem 0;
 }
-#next-prev-button button:hover{
-    background-color: #D4BB92;
-    border-color: #D4BB92;
+
+#next-prev-button button:hover {
+	background-color: #D4BB92;
+	border-color: #D4BB92;
 }
+
 #prev {
-    float: left;
+	float: left;
 }
+
 #next {
-    float: right;
+	float: right;
 }
 
 .popup {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
-  opacity: 0;
-  visibility: hidden;
-  transition: .6s;
-
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	opacity: 0;
+	visibility: hidden;
+	transition: .6s;
 }
+
 .popup.is-show {
-  opacity: 1;
-  visibility: visible;
+	opacity: 1;
+	visibility: visible;
 }
+
 .popup-inner {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-  width: 80%;
-  max-width: 600px;
-  padding: 0px;
-  background-color: rgb(102, 209, 212);
-  z-index: 2;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 80%;
+	max-width: 600px;
+	padding: 0px;
+	background-color: rgb(102, 209, 212);
+	z-index: 2;
 }
+
 .popup-inner img {
-  width: 100%;
+	width: 100%;
 }
+
 .close-btn {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  cursor: pointer;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 50px;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	cursor: pointer;
 }
+
 .close-btn i {
-  font-size: 20px;
-  color: #333;
+	font-size: 20px;
+	color: #333;
 }
+
 .black-background {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.8);
-  z-index: 1;
-  cursor: pointer;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .8);
+	z-index: 1;
+	cursor: pointer;
 }
 
-.pChara{
-	width:250px;
-	height:250px;
-	margin-left:180px;
-	margin-top:30px;
+.pChara {
+	width: 250px;
+	height: 250px;
+	margin-left: 180px;
+	margin-top: 30px;
 }
 
-.login_text{
-	text-align:center;
+.login_text {
+	text-align: center;
 	font-family: "Nico Moji";
-	font-size:20px;
-
+	font-size: 20px;
 }
 
-.loginBonus_text{
-	text-align:center;
+.loginBonus_text {
+	text-align: center;
 }
 
+/* ▼タブ(共通装飾＋非選択状態の装飾) */
+.tab {
+	display: inline-block; /* インラインブロック化 */
+	border-width: 1px 1px 0px 1px; /* 上側と左右に枠線を引く */
+	border-style: solid; /* 枠線の種類は「実線」 */
+	border-color: black; /* 枠線の色は「黒」 */
+	border-radius: 0.75em 0.75em 0px 0px; /* 左上と右上の角だけを丸くする */
+	padding: 0.75em 1em; /* 内側の余白量 */
+	font-weight: bold; /* タブの文字を太字にする */
+	color: black; /* タブの文字色：黒色 */
+	background-color: #e0e0e0; /* タブの(非選択状態の)背景色：灰色 */
+}
+
+/* ▼タブにマウスポインタが載った際の装飾 */
+.tab:hover {
+	color: green; /* タブの文字色：緑色 */
+	background-color: #ccffcc; /* タブの背景色：淡い緑色 */
+	cursor: pointer; /* マウスポインタの形状を「指(指し示す形)」にする */
+}
+
+/* ▼選択状態のタブ(＝チェックが入っているラジオボタンの隣にあるタブの装飾) */
+input:checked+.tab {
+	color: red; /* タブの文字色：赤色 */
+	background-color: #ffffcc; /* タブの背景色：淡い黄色 */
+}
+
+/* ▼タブ機能を制御するラジオボタン(非表示にする) */
+.tabbox input {
+	display: none;
+}
+
+/* ▼タブの中身(共通装飾＋非選択状態の装飾) */
+   .tabcontent {
+      display: none;             /* 標準では非表示にする */
+      border: 1px solid black;   /* 枠線を引く：黒色で1ピクセルの実線 */
+      padding: 1em;              /* 内側の余白量 */
+      background-color: #ffffcc; /* 背景色：淡い黄色(※選択中のタブの背景色と合わせます) */
+   }
+
+   /* ▼チェックが入っているラジオボタンに対応するタブの中身を表示する */
+   #tabcheck1:checked ~ #tabcontent1 { display: block; }
+   #tabcheck2:checked ~ #tabcontent2 { display: block; }
+   #tabcheck3:checked ~ #tabcontent3 { display: block; }
 
 
+   /* ▼チェックが入っているラジオボタンの隣にあるタブの装飾(＝選択状態のタブ) */
+   input:checked + .tab {
+      z-index: 10;         /* ※2A */
+      position: relative;  /* ※3 */
+   }
+   /* ▼タブの中身(共通装飾＋非選択状態の装飾) */
+   .tabcontent {
+      margin-top: -1px;    /* ※1 */
+      z-index: 0;          /* ※2B */
+      position: relative;  /* ※3 */
+   }
