--- a/src/WebContent/css/login.css
+++ b/src/WebContent/css/login.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* font settings */
+@import "https://use.fontawesome.com/releases/v5.13.0/css/all.css";
 /* background settings */
 main {
     font-family: serif;
@@ -12,7 +13,9 @@ main {
     text-align: center;
 }
 .main {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius:10px;
+    font-family: "Nico Moji";
     max-width: 540px;
     min-height: 200px;
     text-align: center;
