--- a/src/WebContent/css/all.css
+++ b/src/WebContent/css/all.css
@@ -249,9 +249,10 @@ a.btn-border {
     display: inline-block;
     margin: 1.5em 0;
     padding: 7px 10px;
-    max-width: 200px; /* 最大幅 */
+    max-width: 300px; /* 最大幅 */
     min-width: 50px; /* 最小幅 */
-    width: 100%;
+    width: 250px;
+    height: 500px;
     color: #555;
     font-size: 16px;
     background: #FFF;
