--- a/src/WebContent/css/all.css
+++ b/src/WebContent/css/all.css
@@ -242,6 +242,8 @@ a.btn-border {
 
 .maincontents{
     display: flex;
+    position:static;
+     left: 10px;
 }
 
 .animalcomment {
@@ -252,14 +254,14 @@ a.btn-border {
     max-width: 300px; /* 最大幅 */
     min-width: 50px; /* 最小幅 */
     width: 250px;
-    height: 500px;
+    height: 300px;
     color: #555;
     font-size: 16px;
     background: #FFF;
     border: solid 3px #555;
     box-sizing: border-box;
   }
-  .animalcomment :before {
+.animalcomment :before {
     content: "";
     position: absolute;
     bottom: -24px;
@@ -269,7 +271,7 @@ a.btn-border {
     border-top: 12px solid #FFF;
     z-index: 2;
   }
-  .animalcomment :after {
+.animalcomment :after {
     content: "";
     position: absolute;
     bottom: -30px;
