--- a/src/WebContent/css/password_reset.css
+++ b/src/WebContent/css/password_reset.css
@@ -12,7 +12,7 @@ main {
     text-align: center;
 }
 .main {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255,0.9);
     max-width: 540px;
     min-height: 200px;
     text-align: center;
