--- a/src/WebContent/css/new_account.css
+++ b/src/WebContent/css/new_account.css
@@ -1,1 +1,62 @@
 @charset "UTF-8";
+/* font settings */
+@import "https://use.fontawesome.com/releases/v5.13.0/css/all.css";
+
+/*ロゴ中央寄せ*/
+.logo{
+	text-align: center;
+    margin: 0 auto 0 auto;
+}
+
+.main {
+    background-color:rgba(255, 255, 255, 0.9);
+    border-radius:10px;
+    font-family: "Nico Moji";
+    font-size: 20px;
+    line-height: 1.5em;
+    color: rgb(0,0,0);
+    max-width: 540px;
+    min-height: 200px;
+    text-align: center;
+    padding: 10px;
+    margin: 0 auto 0 auto;
+}
+
+.main h2{
+	font-size: 28px;
+}
+
+form{
+	background-color:rgba(167,210,141,0.9);
+
+}
+
+.newform{
+	width:200px;
+	height:20px;
+	font-size:16px;
+	border: none;
+    background: rgba(219,235,196,0.9);
+    border-radius: 2px;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+
+
+
+.footerimg{
+	display :flex;				/*画像横並び*/
+	justify-content: center;	/*画像中央寄せ*/
+}
+
+.footerimg img{
+	width:420px;
+	height: 120px;
+}
+
+.footer p{
+	color: #fff;
+}
