--- a/src/WebContent/css/schedule_edit.css
+++ b/src/WebContent/css/schedule_edit.css
@@ -58,8 +58,8 @@ details[open] {
 
   .shorttext{
  	font-size: 14px;
- 	width: 60px;
- 	height:15px;
+ 	width: 100px;
+ 	height:20px;
     margin: 5px;
     padding: 5px;
     background: rgba(255, 255, 255, 0.8);
@@ -73,7 +73,7 @@ details[open] {
 
   .longtext{
  	font-size: 12px;
-    width: 110px;
+    width: 300px;
     height: 40px;
     margin: 5px;
     padding: 5px;
@@ -100,3 +100,7 @@ details[open] {
     appearance: none;
   }
 
+.h2 img{
+	width:300px;
+	height:100px;
+}
