--- a/src/WebContent/css/all.css
+++ b/src/WebContent/css/all.css
@@ -56,7 +56,7 @@ body {
   height: 3px;
   width: 25px;
   border-radius: 3px;
-  background: #f0ffff;
+  background: #000000;
   transition: 0.5s;
   position: absolute;
 }
