--- a/src/WebContent/css/diary.css
+++ b/src/WebContent/css/diary.css
@@ -47,6 +47,11 @@ border: solid 1px  black;
   bottom: 0%;
 }
 
+.h2 img{
+	width:300px;
+	height:100px;
+}
+
 /* .dDay,.dTitle{
 	width:5px;
 	height:10px;
